# probabilistic-reasoning-llms

./: .gitignore  README.md  ideas.md  notes.md  pyproject.toml  test_elbo_flip.py
experiments/: cpt_variant_generation.py  dag_config_generation.py  dataset_export.py  files_explanation.md  generate_networks_dataset.ipynb  generate_networks_dataset.py  naming_variant_generation.py  notes.md
experiments/network_generation/: cpt_variant_generation.py  dag_config_generation.py  dataset_export.py  explore_networks_dataset.ipynb  generate_networks_dataset.py  naming_variant_generation.py
experiments/queries_generation/: explore_queries_dataset.ipynb  generate_queries_dataset.py  query_dataset_export.py  query_variant_generation.py
notebooks/: test_llm_inference_discrete.ipynb  test_pgmpy_continuous.ipynb  test_pgmpy_discrete.ipynb
notebooks/continuous/: lgbn_to_joint_gaussian.py  linear_gaussian_bn_experiments.md  pgmpy_bug_report.md  prompts.yaml  test_inference.py  test_llm_inference_continuous.ipynb  test_llm_inference_gaussian.ipynb  test_pgmpy_continuous.ipynb  test_pgmpy_gaussian.ipynb  test_pyro_continuous.ipynb  test_pyro_gaussian_importance.ipynb  test_pyro_gaussian_mcmc.ipynb  test_pyro_gaussian_svi.ipynb
notebooks/discrete/: notes_mcmc.md  notes_pyro.md  notes_svi.md  prompts.yaml  prompts_xml.yaml  question_about_elbo_flip.md  test_llm_inference_discrete.ipynb  test_pgmpy_discrete.ipynb  test_pyro_discrete.ipynb  (+1 more)
src/: bn_generation.py  bn_query_sweep.py  bn_utils.py  cpd_utils.py  graph_generation.py  inference_continuous.py  llm_calling.py  query_generation.py  save_outputs.py  test_llm_inference_discrete.py  tool_calling.py
(+44 files in other folders)
