[project]
name = "decision-theory-llms"
version = "0.1.0"
description = "Project to investigate the capabilities of LLMs in decision theory problems"
readme = "README.md"
requires-python = ">=3.12.3"

dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "openai>=1.99.9",
    "pgmpy>=1.0.0",
    "pyro-ppl>=1.9.1",
    "seaborn>=0.13.0",
    # Only for RTX 5090
    # "torch>=2.9.0.dev20250824",
]

# Only for RTX 5090
# [[tool.uv.index]]
# name = "pytorch-nightly"
# url = "https://download.pytorch.org/whl/nightly/cu128"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]


[tool.ruff]
line-length = 88  # Matches Black's default
indent-width = 4  # Matches Black's default

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "D",  # pydocstyle
    "D213",  # docstring starts on the 2nd line
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
]
ignore = [
    "D212",  # Incompatible with D213
]
task-tags = ["TODO", "todo"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
disallow_untyped_defs = false
allow_redefinition = true

[tool.isort]
profile = "black"
src_paths = ["src"]
line_length = 88
order_by_type = true
force_single_line = false
combine_as_imports = true
